# Robot_CDF

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
robot/: package.xml
robot/script/: test_node.py
src/robot/: CMakeLists.txt  package.xml
src/robot/config/: ekf.yaml
src/robot/launch/: full.launch  test.launch
src/robot/script/: asserv.py  go_pos.py  imu.py  kalman.py  odometrie.py  pathplanner.py  serialComunication.py  strat.py  test_node.py
